// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/Breadcrumbs/Item WithAriaCurrent play-test 1`] = `
<div data-test-block="true">
  <ol>
    <li class="_breadcrumbsItem_1ojdc_1"
        aria-current="page"
    >
      <a class="_link_1qzdp_1  "
         href="#"
      >
        Bedrift og organisasjon
      </a>
    </li>
  </ol>
</div>
`;

exports[`Tester/Breadcrumbs/Item WithAttributes play-test 1`] = `
<div data-test-block="true">
  <ol>
    <li id="htmlId"
        class="_breadcrumbsItem_1ojdc_1 dummyClassname"
        lang="nb"
        data-testid="123ID"
    >
      <a class="_link_1qzdp_1  "
         href="#"
      >
        Bedrift og organisasjon
      </a>
    </li>
  </ol>
</div>
`;

exports[`Tester/Breadcrumbs/Item WithRef play-test 1`] = `
<div data-test-block="true">
  <ol>
    <li class="_breadcrumbsItem_1ojdc_1"
        id="dummyIdForwardedFromRef"
    >
      <a class="_link_1qzdp_1  "
         href="#"
      >
        Bedrift og organisasjon
      </a>
    </li>
  </ol>
</div>
`;
